# armafem

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  elliptic_1D.cpp  simply_supported_beam.cpp
src/: CMakeLists.txt  assem.cpp  assem.h  bar1e.cpp  bar1e.h  beam2e.cpp  beam2e.h  solveq.cpp  solveq.h
src/fem/: CMakeLists.txt  assem.h  bar1e.h  beam2.cpp  beam2.h  beam2e.h  solveq.cpp
src/io/: CMakeLists.txt  io_utils.cpp  io_utils.h
src/io/gnuplot/: CMakeLists.txt  gnuplotExporter.cpp  gnuplotExporter.h
src/io/vtk/: CMakeLists.txt  vtkExporter.cpp  vtkExporter.h
tests/: CMakeLists.txt  test_assem.cpp  test_bar1.cpp  test_smoke.cpp  test_solveq.cpp
